# hivemind

./: .gitignore  ARCHITECTURE_INDEX.md  ARCHITECTURE_SUMMARY.md  Cargo.toml  LICENSE  PLAN.md  PROGRESS.md  README.md  SPEC.md  TESTING_GUIDE.md  rustfmt.toml  seattle_weather.json  seattle_weather.txt
crates/hive-agent-kit/: Cargo.toml
crates/hive-agent-kit/src/: export.rs  import.rs  lib.rs  rewrite.rs  types.rs
crates/hive-agents/: Cargo.toml
crates/hive-agents/src/: error.rs  lib.rs  names.rs  runner.rs  supervisor.rs  telemetry.rs  topology.rs  types.rs
crates/hive-agents/tests/: integration_tests.rs  multi_agent_collaboration.rs
crates/hive-api/: Cargo.toml  README.md
crates/hive-api/src/: afk.rs  auth_middleware.rs  canvas_ws.rs  lib.rs  provider_auth.rs  scheduler_deps.rs  services.rs  workflow_deps.rs
crates/hive-api/tests/: agent_kit_integration.rs  chat_indexing_integration.rs  e2e_chat_stream_question_message.rs  e2e_comprehensive.rs  e2e_data_classification.rs  e2e_question_as_message.rs  e2e_question_sse_race.rs  e2e_scenario1_agent_question.rs  e2e_scenario2_multi_agent.rs  e2e_scenario3_email_trigger.rs  e2e_scenario4_workflow_context.rs  e2e_workflow_agent_question_sse.rs  e2e_workflow_managed_flag.rs  knowledge_integration.rs  local_models_integration.rs  scheduler_integration.rs  scheduler_integration_50.rs
crates/hive-canvas/: Cargo.toml
crates/hive-canvas/src/: clustering.rs  context.rs  dag_observer.rs  error.rs  events.rs  layout.rs  lib.rs  sqlite_store.rs  store.rs  token_counter.rs  types.rs
crates/hive-chat/: Cargo.toml
crates/hive-chat/src/: bot_service.rs  bridge.rs  canvas_ws.rs  chat.rs  indexing_service.rs  lib.rs  persona_tool_factory.rs  session_log.rs  workflow_context.rs
crates/hive-cli/: Cargo.toml  README.md
crates/hive-cli/src/: main.rs
crates/hive-code-executor/: Cargo.toml
crates/hive-code-executor/src/: executor.rs  lib.rs  session.rs  subprocess.rs  tool_bridge.rs  wasm_executor.rs
crates/hive-code-executor/tests/: e2e_tests.rs
crates/hive-connectors/: Cargo.toml
crates/hive-connectors/src/: audit.rs  config.rs  connector.rs  lib.rs  mail_utils.rs  message_state.rs  registry.rs  resolver.rs  secrets.rs  service.rs  service_registry.rs
crates/hive-context-map/: Cargo.toml
crates/hive-context-map/src/: lib.rs  structure.rs  walker.rs
crates/hive-contracts/: Cargo.toml  README.md
crates/hive-contracts/src/: chat.rs  comms.rs  config.rs  connectors.rs  daemon.rs  daemon_service.rs  hardware.rs  interaction.rs  lib.rs  local_models.rs  mcp.rs  model_router.rs  models.rs  permissions.rs  prompt_sanitize.rs  risk.rs  scheduler.rs  shell.rs  skills.rs  tools.rs  workspace_classification.rs
crates/hive-core/: Cargo.toml  README.md  model-metadata.yaml
crates/hive-core/bundled-personas/: 3dprint-cad-designer.yaml  3dprint-mesh-analyst.yaml  3dprint-print-advisor.yaml  execution-agent.yaml  feature-documenter.yaml  feature-implementor.yaml  feature-planner.yaml  feature-researcher.yaml  feature-reviewer.yaml  feature-spec-writer.yaml  feature-tester.yaml  finance-tax-advisor.yaml  general.yaml  research.yaml
crates/hive-core/bundled-workflows/: 3dprint-design.yaml  approval-workflow.yaml  email-responder.yaml  email-triage.yaml  plan-and-implement.yaml  software-feature.yaml
crates/hive-core/src/: audit.rs  bundled.rs  config.rs  daemon_control.rs  daemon_token.rs  entity_graph.rs  event_bus.rs  event_log.rs  lib.rs  model_limits.rs  models.rs  prompt_template.rs  secret_cache.rs  secret_store.rs  service_log.rs  service_manager.rs
crates/hive-daemon/: Cargo.toml  Info.plist  README.md  build.rs
crates/hive-daemon/src/: main.rs
crates/hive-inference/: Cargo.toml  README.md
crates/hive-inference/src/: defaults.rs  embedding.rs  hardware.rs  hub.rs  ipc.rs  lib.rs  registry.rs  runtime.rs  runtime_candle.rs  runtime_llama.rs  runtime_manager.rs  runtime_onnx.rs  worker_proxy.rs  worker_server.rs
crates/hive-inference/tests/: runtime_candle_tests.rs  runtime_llama_tests.rs  runtime_manager_tests.rs  runtime_onnx_tests.rs
crates/hive-iwork/: Cargo.toml
crates/hive-iwork/src/: iwa.rs  lib.rs  proto.rs
crates/hive-knowledge/: Cargo.toml  README.md
crates/hive-knowledge/src/: lib.rs  memory.rs  pool.rs
crates/hive-local-models/: Cargo.toml
crates/hive-local-models/src/: lib.rs
crates/hive-loop/: Cargo.toml  README.md
crates/hive-loop/src/: actions.rs  classification_middleware.rs  code_act_prompt.rs  code_extraction.rs  compactor.rs  engine.rs  error.rs  expression.rs  legacy.rs  lib.rs  risk_middleware.rs  schema.rs  stall_detector.rs  stall_middleware.rs  state.rs  store.rs  token_budget.rs  tool_budget.rs  tool_policy.rs  traits.rs  workflows.rs
crates/hive-loop/tests/: chat_agent_integration.rs  code_act_integration.rs  compaction_integration.rs  engine_integration.rs  process_tool_integration.rs
crates/hive-loop/workflows/: plan_then_execute.yaml  react.yaml  sequential.yaml
crates/hive-mcp/: Cargo.toml  README.md
crates/hive-mcp/src/: catalog.rs  integration_tests.rs  lib.rs  runtime.rs  session_mcp.rs  streamable_http.rs
crates/hive-mcp/tests/: mock_mcp_server.rs
crates/hive-model/: Cargo.toml  README.md
crates/hive-model/src/: lib.rs  local_provider.rs  transport.rs  transport_anthropic.rs  transport_foundry.rs  transport_openai.rs  transport_utils.rs
crates/hive-node-env/: Cargo.toml
crates/hive-node-env/src/: download.rs  lib.rs  manager.rs  platform.rs
crates/hive-plugins/: Cargo.toml
crates/hive-plugins/src/: bridge.rs  config_schema.rs  health.rs  host.rs  lib.rs  manifest.rs  message_router.rs  protocol.rs  registry.rs  sandbox.rs
crates/hive-plugins/tests/: e2e_plugin.rs  event_integration.rs  scheduler_integration.rs
crates/hive-process/: Cargo.toml
crates/hive-python-env/: Cargo.toml
crates/hive-risk/: Cargo.toml
crates/hive-runtime-worker/: Cargo.toml
crates/hive-scheduler/: Cargo.toml
crates/hive-skills/: Cargo.toml
crates/hive-skills-service/: Cargo.toml
crates/hive-test-utils/: Cargo.toml  README.md
docs-site/: index.md  (+4 more)
(+580 files in other folders)
