[package]
name = "hive-agent-kit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hive-contracts = { path = "../hive-contracts" }

anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
