[package]
name = "hive-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = { workspace = true }
hive-classification = { path = "../hive-classification" }
hive-code-executor = { path = "../hive-code-executor" }
hive-contracts = { path = "../hive-contracts" }
hive-loop = { path = "../hive-loop" }
hive-model = { path = "../hive-model" }
hive-skills = { path = "../hive-skills" }
hive-tools = { path = "../hive-tools" }
parking_lot.workspace = true
tokio = { workspace = true }
tokio-util.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = "6"
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tempfile = { workspace = true }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-stream = { workspace = true }
