[package]
name = "hive-canvas"
version.workspace = true
edition.workspace = true

[dependencies]
hive-contracts = { path = "../hive-contracts" }
parking_lot.workspace = true
rusqlite = { workspace = true }
rstar = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
