[package]
name = "hive-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
service-manager = ["hive-core/service-manager"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
hive-core = { path = "../hive-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
