[package]
name = "hive-context-map"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
hive-contracts = { path = "../hive-contracts" }
hive-model = { path = "../hive-model" }
hive-workspace-index = { path = "../hive-workspace-index" }
arc-swap.workspace = true
glob.workspace = true
regex.workspace = true
serde_json.workspace = true
sha2.workspace = true
tracing.workspace = true
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
quick-xml = "0.37"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
serde_json = "1"
tempfile.workspace = true
