[package]
name = "hive-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
service-manager = []

[dependencies]
anyhow.workspace = true
dirs.workspace = true
hive-classification = { path = "../hive-classification" }
hive-contracts = { path = "../hive-contracts" }
handlebars.workspace = true
include_dir.workspace = true
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
parking_lot.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile.workspace = true
