[package]
name = "hive-iwork"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
snap = "1"
tracing.workspace = true
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = { workspace = true }
