[package]
name = "hive-local-models"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
arc-swap.workspace = true
axum.workspace = true
hive-contracts = { path = "../hive-contracts" }
hive-inference = { path = "../hive-inference", default-features = false }
parking_lot.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
