[package]
name = "hive-mcp"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
hive-classification = { path = "../hive-classification" }
hive-contracts = { path = "../hive-contracts" }
hive-core = { path = "../hive-core" }
hive-node-env = { path = "../hive-node-env" }
hive-python-env = { path = "../hive-python-env" }
hive-sandbox = { path = "../hive-sandbox" }
futures = "0.3"
parking_lot.workspace = true
reqwest.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
sse-stream = "0.1"
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow = "1"
hive-mcp = { path = ".", features = [] }
reqwest.workspace = true
rmcp = { workspace = true, features = ["client", "transport-async-rw", "transport-sse"] }
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { workspace = true }
