[package]
name = "hive-node-env"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
flate2 = "1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tar = "0.4"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
xz2 = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
