[package]
name = "hive-plugins"
description = "Plugin host for Hivemind TypeScript connector plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

hive-contracts = { path = "../hive-contracts" }
hive-node-env = { path = "../hive-node-env" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
