[package]
name = "hive-process"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
dashmap = "6"
hive-sandbox = { path = "../hive-sandbox" }
parking_lot.workspace = true
portable-pty = "0.8"
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tokio.workspace = true
