[package]
name = "hive-risk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hive-contracts = { path = "../hive-contracts" }
hive-classification = { path = "../hive-classification" }
hive-core = { path = "../hive-core" }
hive-model = { path = "../hive-model" }
arc-swap.workspace = true
futures-util.workspace = true
regex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
