[package]
name = "hive-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
allow-localhost = []
test-support = []

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
cron.workspace = true
hive-contracts = { path = "../hive-contracts" }
hive-core = { path = "../hive-core" }
parking_lot.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
hive-scheduler = { path = ".", features = ["allow-localhost", "test-support"] }
axum.workspace = true
parking_lot.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
