[package]
name = "hive-skills"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hive-contracts = { path = "../hive-contracts" }

anyhow = { workspace = true }
async-trait = { workspace = true }
gix = { workspace = true }
parking_lot.workspace = true
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
