[package]
name = "hive-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
hive-api = { path = "../hive-api" }
hive-connectors = { path = "../hive-connectors" }
hive-contracts = { path = "../hive-contracts" }
hive-core = { path = "../hive-core" }
hive-model = { path = "../hive-model" }
hive-scheduler = { path = "../hive-scheduler" }
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[[bin]]
name = "test_daemon"
path = "src/bin/test_daemon.rs"
